detailled list of changes, please see ChangeLog.

2.10.2 (UNRELEASED)
-------------------
Bug fixes:
 * Resolve symlinks in file references in Python crash signatures.
   (LP: #1179979)
 * Fix endless loop of EOFErrors with broken core dumps. (LP: #1168849)
 * report.py, add_gdb_info(): Fix crash if gdb did not determine an assertion
   message. (LP: #1171484)

2.10.1 (2013-05-14)
-------------------
Bug fixes:
 * Fix ui.test_run_crash_anonymity_escaping test when running as root.
 * launchpad.py: Fix crash when trying to adjust a distro-only bug task if the
   bug also already has a distropackage task.
 * apt/dpkg: When there is no -dbg package, install all -dbg packages of the
   corresponding source package, and only then fall back to -dbgsym.
   (LP: #1003234)

2.10 (2013-04-30):
------------------
Improvements:
 * Support retracing foreign powerpc reports, thanks Steve Langasek.
 * apport/report.py: Generate a crash signature for suspend/resume failures.
 * hookutils.py: Add attach_upstart_logs(), thanks Steve Langasek.
 * hookutils.py, in_session_of_problem(): Port from ConsoleKit to logind.

Bug fixes:
 * hookutils.attach_conffiles(): Fix IOError crash on inaccessible conffiles;
   mark them as '[inaccessible: <reason>]' instead. (LP: #1154536)
 * hookutils.in_session_of_problem(): Fix crash when the current locale is
   invalid. (LP: #1154896) 
 * data/gcc_ice_hook: Fix crash with source files that have non-UTF8 data.
   (LP: #1045283)
 * apport/report.py: Handle the case where the user has been removed from the
   system, but one of its still-running binaries crashes (LP: #1163453).
 * Fix anonymization of user/GECOS fields with regexp control characters like
   '+'. (LP: #985049)
 * Run tests under LC_CTYPE=C and unset LANG as well, to discover assumptions
   about UTF-8 locales. Fix the two failing tests.
 * Fix UnicodeDecodeError when apport encounters non-ASCII environment
   variables. (LP: #1172638)

2.9.2 (2013-03-19):
-------------------